# SW_Parallel_Project

./: .gitignore
MPI/fast_fourei_transform/: fft_MPI.c  fft_iterative.cpp  fft_mpi2.c  tree_sum.c
MPI/fast_fourei_transform/parallel/MPI_FFT/: Complex.h  FFT_MPI.cpp  MPIHelloWorld.cpp  MPI_FFT.sln  MPI_FFT.vcxproj  array_in.txt  test_out_a.txt
MPI/fast_fourei_transform/parallel/MPI_FFT_Clion/: 0  CMakeLists.txt  cache_test.c  common.h  main.c  main.s  main2.c  mk.sh  mpi_snip.cpp  run.sh  test_program
MPI/fast_fourei_transform/sequtial/: Complex.h
MPI/matrix_multiply/: matrix_multiply_MPI.cpp
MPI/prefix_sum/: prefix_sum_MPI.cpp
MPI/sample_sort/: SampleSortSoln.c  proj3.sbatch
MPI/杂项/: L02-MPI-2017-03-02_62409023.pptx  MPI-2017-03-23_708007012.pptx
MPI/杂项/bucket_sort/: bucket_sort1.c  bucket_sort3.cpp  buvket_sort4.cpp
MPI/杂项/examples/helloworld/: MPIHelloWorld.c  MPIHelloWorld.sln  MPIHelloWorld.vcxproj  resource.h
MPI_Sunway/: CMakeLists.txt
MPI_Sunway/instruction/: CMakeLists.txt  Makefile  ins_test.c  run.sh
MPI_Sunway/matrix_multiply/: CMakeLists.txt  Makefile  core_1024_size_2048.out  core_1024_size_4096.out  core_16_size_2048.out  core_2048_size_16384‬‬.out  core_2048_size_2048.out  core_4_size_2048.out  matrix_multiply.c  run.sh
MPI_Sunway/matrix_multiply/out - 副本/: change_data.py  core1024_size10240.txt  core1024_size2048.txt  core128_size1024.txt  core128_size256.txt  core128_size768.txt  core16_size160.txt  core16_size64.txt  core16_size96.txt  core256_size1024.txt  core256_size2048.txt  core256_size512.txt  core4_size32.txt  core4_size40.txt  core4_size8.txt  core512_size5120.txt  matrix  matrix.xlsx  to_pic.py
MPI_Sunway/parallel_fft/: CMakeLists.txt  Makefile  parallel_fft.c  run.sh
MPI_Sunway/prefix_sum/: CMakeLists.txt  Makefile  prefix_sum.c  run.sh
MPI_Sunway/sample_sort/: CMakeLists.txt  Makefile  run.sh  sample_sort.c
MPI_Sunway/scatter_test/: CMakeLists.txt  Makefile  create_sym.sh  run.sh  scatter_test.c
learning/: sort.cu  sync_file.sh
learning/EX1-mpi-athread-c/: master.c
learning/array_divide/: Makefile  divide  master.c  slave.c
matirx_multiply/: Makefile  master.c  run.sh  slave.c  test.txt
odd_even_sort/: Makefile  a.out  master.c  run.sh  slave.c
sum_prefix/: master.c  slave.c
